# cs153_project

./: .gitignore  README.md  main.nf  nextflow.config  pyproject.toml
biomarker_agent/: README.md  __init__.py  agent.py  cache.py  cli.py  context.py  datactx.py  loader.py  plots.py  plotstyle.py  prompts.py  providers.py  report.py  viewer_build.py  viewer_figures.py
biomarker_agent/tools/: __init__.py  base.py  cbioportal.py  depmap.py  drug_context.py  figures.py  internal_assoc.py  literature.py  opentargets.py  pathways.py  stringdb.py
biomarker_discovery/: __init__.py  baseline_trainers.py  correlations.py  utils.py
conf/: all_compounds.txt  reduced_compounds.txt  response_ids.txt
docs/: biomarker_agent.md
docs/superpowers/plans/: 2026-06-02-biomarker-interpretation-agent.md  2026-06-03-agent-plotting-tools.md  (+1 more)
modules/: benchmark_train.nf
scripts/: __init__.py  run_benchmark.py
tests/: conftest.py  test_agent.py  test_cache_base.py  test_cbioportal.py  test_cli_e2e.py  test_context.py  test_datactx.py  test_depmap.py  test_drug_context.py  test_figures.py  test_internal_assoc.py  test_literature.py  test_loader.py  test_opentargets.py  test_pathways.py  test_plots_data.py  test_plots_external.py  test_plotstyle.py  test_providers.py  test_registry.py  test_report.py  test_stringdb.py  test_viewer_build.py
viewer/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer/scripts/: build_data.py
viewer/src/: main.tsx  styles.css
workflows/: biomarker_discovery_pipeline.nf
(+21 files in other folders)
