[project]
name = "biomarker-discovery"
version = "2.0.0"
description = "biomarker-discovery: drug response prediction benchmark"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=3.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "shap>=0.43",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel"]

[tool.setuptools]
packages = ["biomarker_discovery"]

[tool.uv]
# xgboost only needs nvidia-nccl-cu12 on Linux (CUDA wheels). Scope the
# version pin to Linux so the env stays resolvable/installable on macOS
# and Windows, where no nvidia-nccl-cu12 wheel exists.
override-dependencies = ["nvidia-nccl-cu12>=2.18,<2.22; platform_system == 'Linux'"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
